@@ -37,8 +37,8 @@ Changes Since 0.13.1
 * docutils/parsers/rst/states.py:
 
   - Added functionality: escaped whitespace in URI contexts.
-  - Recognize non-ASCII whitespace around inline literal, target,
-    and substitution.
+  - Consistent handling of all whitespace characters in inline markup
+    recognition. Last part of fix for [ 3402314 ].
 
 * docutils/parsers/rst/directives/images.py:
 
